@@ -50,11 +50,7 @@ mpn_mul_n (mp_ptr p, mp_srcptr a, mp_srcptr b, mp_size_t n)
       mpn_toom33_mul (p, a, n, b, n, ws);
       TMP_SFREE;
     }
-#if WANT_FFT || TUNE_PROGRAM_BUILD
-  else if (BELOW_THRESHOLD (n, MUL_FFT_THRESHOLD))
-#else
-  else if (BELOW_THRESHOLD (n, MPN_TOOM44_MAX_N))
-#endif
+  else if (BELOW_THRESHOLD (n, MUL_TOOM6H_THRESHOLD))
     {
       mp_ptr ws;
       TMP_SDECL;
@@ -63,22 +59,28 @@ mpn_mul_n (mp_ptr p, mp_srcptr a, mp_srcptr b, mp_size_t n)
       mpn_toom44_mul (p, a, n, b, n, ws);
       TMP_SFREE;
     }
+  else if (BELOW_THRESHOLD (n, MUL_TOOM8H_THRESHOLD))
+    {
+      mp_ptr ws;
+      TMP_SDECL;
+      TMP_SMARK;
+      ws = TMP_SALLOC_LIMBS (mpn_toom6_sqr_itch (n));
+      mpn_toom6h_mul (p, a, n, b, n, ws);
+      TMP_SFREE;
+    }
+  else if (BELOW_THRESHOLD (n, MUL_FFT_THRESHOLD))
+    {
+      mp_ptr ws;
+      TMP_DECL;
+      TMP_MARK;
+      ws = TMP_ALLOC_LIMBS (mpn_toom8_sqr_itch (n));
+      mpn_toom8h_mul (p, a, n, b, n, ws);
+      TMP_FREE;
+    }
   else
-#if WANT_FFT || TUNE_PROGRAM_BUILD
     {
       /* The current FFT code allocates its own space.  That should probably
 	 change.  */
       mpn_fft_mul (p, a, n, b, n);
     }
-#else
-    {
-      /* Toom4 for large operands.  */
-      mp_ptr ws;
-      TMP_DECL;
-      TMP_MARK;
-      ws = TMP_BALLOC_LIMBS (mpn_toom44_mul_itch (n, n));
-      mpn_toom44_mul (p, a, n, b, n, ws);
-      TMP_FREE;
-    }
-#endif
 }
